--- a/compile/docs.html
+++ b/compile/docs.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
 			Главная страница
 		</title>
@@ -21,7 +22,7 @@
 		<header class="header container">
 
 	<div class="row header__top">
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__phone">
 				<span class="header__phone-label">
 					Контактный телефон:
@@ -31,12 +32,12 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-14">
+		<div class="col-xs-14">
 			<a class="header__logo" href="index.html">
 				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__social">
 				<span class="header__social-label">
 					Присоединяйтесь
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+		<div class="col-xs-42 col-xs-offset-3 p-l-15">
 			
 			<ul class="nav nav-justified topnav">
 	<li class="topnav__item text-right">
@@ -100,7 +101,7 @@
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
@@ -145,7 +146,7 @@
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -164,7 +165,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -181,7 +182,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--pdf"></i>
@@ -197,7 +198,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
@@ -214,7 +215,7 @@
 					</div>
 					
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
@@ -230,7 +231,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -247,7 +248,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--pdf"></i>
@@ -263,7 +264,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--doc"></i>
@@ -280,7 +281,7 @@
 					</div>
 
 					<div class="row docs__item">
-						<div class="col-md-48 col-lg-42 col-lg-offset-6">
+						<div class="col-xs-42 col-xs-offset-6">
 							<h2 class="docs__item-name">
 								<a class="decorate" href="">
 									<i class="icons icons--xls"></i>
@@ -311,14 +312,14 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-6">
+				<div class="col-xs-6">
 
 					<a class="footer__logo" href="">
 						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
 					</a>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<div class="footer__phone">
 						<span class="footer__phone-label">
@@ -344,7 +345,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<ul class="nav btmnav btmnav--bold">
 						<li class="btmnav__item">
@@ -372,7 +373,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -398,7 +399,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -430,10 +431,10 @@
 	<div class="footer__bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-24">
+				<div class="col-xs-24">
 					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
 				</div>
-				<div class="col-md-48 col-lg-24 text-right">
+				<div class="col-xs-24 text-right">
 					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
 				</div>
 			</div>
