--- a/compile/employees.html
+++ b/compile/employees.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
 			Главная страница
 		</title>
@@ -21,7 +22,7 @@
 		<header class="header container">
 
 	<div class="row header__top">
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__phone">
 				<span class="header__phone-label">
 					Контактный телефон:
@@ -31,12 +32,12 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-14">
+		<div class="col-xs-14">
 			<a class="header__logo" href="index.html">
 				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__social">
 				<span class="header__social-label">
 					Присоединяйтесь
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+		<div class="col-xs-42 col-xs-offset-3 p-l-15">
 			
 			<ul class="nav nav-justified topnav">
 	<li class="topnav__item text-right">
@@ -100,7 +101,7 @@
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
@@ -145,7 +146,7 @@
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -170,12 +171,12 @@
 									Директор
 								</h3>
 							</div>
-							<div class="col-md-48 col-lg-12">
+							<div class="col-xs-12">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-1.jpg" width="112" height="112" alt="" />
 								</a>
 							</div>
-							<div class="col-md-48 col-lg-36">
+							<div class="col-xs-36">
 								<span class="employees__item-name">
 									Константинопольский Константин
 									<br />
@@ -198,7 +199,7 @@
 					</h1>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-2.jpg" width="112" height="112" alt="" />
 								</a>
@@ -215,7 +216,7 @@
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-3.jpg" width="112" height="112" alt="" />
 								</a>
@@ -232,7 +233,7 @@
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-4.jpg" width="112" height="112" alt="" />
 								</a>
@@ -253,7 +254,7 @@
 					</div>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-5.jpg" width="112" height="112" alt="" />
 								</a>
@@ -270,7 +271,7 @@
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-6.jpg" width="112" height="112" alt="" />
 								</a>
@@ -287,7 +288,7 @@
 									ритмики
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-7.jpg" width="112" height="112" alt="" />
 								</a>
@@ -308,7 +309,7 @@
 					</div>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-8.jpg" width="112" height="112" alt="" />
 								</a>
@@ -325,7 +326,7 @@
 									группы
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-9.jpg" width="112" height="112" alt="" />
 								</a>
@@ -342,7 +343,7 @@
 									ритмики
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-10.jpg" width="112" height="112" alt="" />
 								</a>
@@ -367,7 +368,7 @@
 					</h1>
 					<div class="employees__line">
 						<div class="row">
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-11.jpg" width="112" height="112" alt="" />
 								</a>
@@ -384,7 +385,7 @@
 									безопасности
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-12.jpg" width="112" height="112" alt="" />
 								</a>
@@ -401,7 +402,7 @@
 									охраны
 								</span>
 							</div>
-							<div class="col-md-48 col-lg-16 employees__item">
+							<div class="col-xs-16 employees__item">
 								<a class="employees__item-frame" href="#">
 									<img src="images/pages-images/employees/img-13.jpg" width="112" height="112" alt="" />
 								</a>
@@ -434,14 +435,14 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-6">
+				<div class="col-xs-6">
 
 					<a class="footer__logo" href="">
 						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
 					</a>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<div class="footer__phone">
 						<span class="footer__phone-label">
@@ -467,7 +468,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<ul class="nav btmnav btmnav--bold">
 						<li class="btmnav__item">
@@ -495,7 +496,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -521,7 +522,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -553,10 +554,10 @@
 	<div class="footer__bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-24">
+				<div class="col-xs-24">
 					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
 				</div>
-				<div class="col-md-48 col-lg-24 text-right">
+				<div class="col-xs-24 text-right">
 					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
 				</div>
 			</div>
