--- a/compile/health-center.html
+++ b/compile/health-center.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
 			Главная страница
 		</title>
@@ -21,7 +22,7 @@
 		<header class="header container">
 
 	<div class="row header__top">
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__phone">
 				<span class="header__phone-label">
 					Контактный телефон:
@@ -31,12 +32,12 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-14">
+		<div class="col-xs-14">
 			<a class="header__logo" href="index.html">
 				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__social">
 				<span class="header__social-label">
 					Присоединяйтесь
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+		<div class="col-xs-42 col-xs-offset-3 p-l-15">
 			
 			<ul class="nav nav-justified topnav">
 	<li class="topnav__item text-right">
@@ -100,7 +101,7 @@
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
@@ -145,7 +146,7 @@
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -162,12 +163,12 @@
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-1.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Массаж для детей и взрослых
@@ -184,12 +185,12 @@
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-2.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Лечебная физкультура
@@ -206,12 +207,12 @@
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-3.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Бассейн + сауна + фитобар
@@ -228,12 +229,12 @@
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-4.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Йога для малышей
@@ -250,12 +251,12 @@
 					</div>
 
 					<div class="row health-center__item">
-						<div class="col-md-48 col-lg-12">
+						<div class="col-xs-12">
 							<a href="">
 								<img class="health-center__item-frame" src="images/pages-images/centr/img-5.jpg" width="112" height="112" alt />
 							</a>
 						</div>
-						<div class="col-md-48 col-lg-36">
+						<div class="col-xs-36">
 							<h2 class="health-center__item-name">
 								<a class="decorate" href="">
 									Йога для будущих мам
@@ -287,14 +288,14 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-6">
+				<div class="col-xs-6">
 
 					<a class="footer__logo" href="">
 						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
 					</a>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<div class="footer__phone">
 						<span class="footer__phone-label">
@@ -320,7 +321,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<ul class="nav btmnav btmnav--bold">
 						<li class="btmnav__item">
@@ -348,7 +349,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -374,7 +375,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -406,10 +407,10 @@
 	<div class="footer__bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-24">
+				<div class="col-xs-24">
 					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
 				</div>
-				<div class="col-md-48 col-lg-24 text-right">
+				<div class="col-xs-24 text-right">
 					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
 				</div>
 			</div>
