--- a/compile/index.html
+++ b/compile/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
 			Главная страница
 		</title>
@@ -21,7 +22,7 @@
 		<header class="header container">
 
 	<div class="row header__top">
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__phone">
 				<span class="header__phone-label">
 					Контактный телефон:
@@ -31,12 +32,12 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-14">
+		<div class="col-xs-14">
 			<a class="header__logo" href="index.html">
 				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__social">
 				<span class="header__social-label">
 					Присоединяйтесь
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+		<div class="col-xs-42 col-xs-offset-3 p-l-15">
 			
 			<ul class="nav nav-justified topnav">
 	<li class="topnav__item text-right">
@@ -100,7 +101,7 @@
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
@@ -141,7 +142,7 @@
 </ul>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div id="carousel-example-generic" class="carousel index-carousel slide" data-ride="carousel">
 
@@ -172,12 +173,12 @@
 <div class="dotblock m-b-60">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-1.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="orange" href="">
 						<span class="decorate">ЯСЛИ</span>
@@ -187,12 +188,12 @@
 					до 8 месяцев
 				</p>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-2.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="marine" href="">
 						<span class="decorate">ДЕТСКИЙ</span><span class="decorate">САД</span>
@@ -202,12 +203,12 @@
 					от 1 до 8 лет
 				</p>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<a class="dotblock__img" href="">
 					<img src="images/iconography/img-3.png" width="175" height="130" alt="" />
 				</a>
 			</div>
-			<div class="col-md-48 col-lg-8">
+			<div class="col-xs-8">
 				<h3 class="dotblock__title">
 					<a class="green" href="">
 						<span class="decorate">НАЧАЛЬНАЯ</span><span class="decorate">ШКОЛА</span>
@@ -223,12 +224,12 @@
 
 <div class="container m-b-20">
 	<div class="row">
-		<div class="col-md-48 col-lg-16 p-t-75">
+		<div class="col-xs-16 p-t-75">
 			<div class="index-special">
 				<a class="index-special__frame" href=""></a>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-32">
+		<div class="col-xs-32">
 			<div class="news">
 				
 				<h2 class="news__title m-b-40">
@@ -236,12 +237,12 @@
 				</h2>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-1.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -256,12 +257,12 @@
 				</div>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-2.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -276,12 +277,12 @@
 				</div>
 
 				<div class="row news__item">
-					<div class="col-md-48 col-lg-11">
+					<div class="col-xs-11">
 						<a class="news__item-img" href="">
 							<img src="images/pages-images/index/news/img-3.jpg" width="137" height="112" alt="" />
 						</a>
 					</div>
-					<div class="col-md-48 col-lg-37">
+					<div class="col-xs-37">
 						<span class="news__item-date">
 							22.12.2015
 						</span>
@@ -318,7 +319,7 @@
 		</p>
 	</div>
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
@@ -329,7 +330,7 @@
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
@@ -338,7 +339,7 @@
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
@@ -352,7 +353,7 @@
 	</div>
 
 	<div class="row m-t-30">
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
@@ -363,7 +364,7 @@
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
@@ -374,7 +375,7 @@
 				</span>
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-16">
+		<div class="col-xs-16">
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
@@ -399,14 +400,14 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-6">
+				<div class="col-xs-6">
 
 					<a class="footer__logo" href="">
 						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
 					</a>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<div class="footer__phone">
 						<span class="footer__phone-label">
@@ -432,7 +433,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<ul class="nav btmnav btmnav--bold">
 						<li class="btmnav__item">
@@ -460,7 +461,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -486,7 +487,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -518,10 +519,10 @@
 	<div class="footer__bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-24">
+				<div class="col-xs-24">
 					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
 				</div>
-				<div class="col-md-48 col-lg-24 text-right">
+				<div class="col-xs-24 text-right">
 					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
 				</div>
 			</div>
