--- a/compile/news.html
+++ b/compile/news.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
 			Главная страница
 		</title>
@@ -21,7 +22,7 @@
 		<header class="header container">
 
 	<div class="row header__top">
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__phone">
 				<span class="header__phone-label">
 					Контактный телефон:
@@ -31,12 +32,12 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-md-48 col-lg-14">
+		<div class="col-xs-14">
 			<a class="header__logo" href="index.html">
 				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
-		<div class="col-md-48 col-lg-17">
+		<div class="col-xs-17">
 			<div class="header__social">
 				<span class="header__social-label">
 					Присоединяйтесь
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row header__bottom">
-		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+		<div class="col-xs-42 col-xs-offset-3 p-l-15">
 			
 			<ul class="nav nav-justified topnav">
 	<li class="topnav__item text-right">
@@ -100,7 +101,7 @@
 
 <div class="container m-b-40">
 	<div class="row">
-		<div class="col-md-48 col-lg-12">
+		<div class="col-xs-12">
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
@@ -145,7 +146,7 @@
 			</div>
 
 		</div>
-		<div class="col-md-48 col-lg-36">
+		<div class="col-xs-36">
 			
 			<div class="page">
 
@@ -172,7 +173,7 @@
 					<ul class="news-list__items">
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -184,7 +185,7 @@
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-1.jpg" width="137" height="112" alt="" />
 									</a>
@@ -193,7 +194,7 @@
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -204,7 +205,7 @@
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-2.jpg" width="137" height="112" alt="" />
 									</a>
@@ -213,7 +214,7 @@
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -225,7 +226,7 @@
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-3.jpg" width="137" height="112" alt="" />
 									</a>
@@ -234,7 +235,7 @@
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -246,14 +247,14 @@
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									&nbsp;
 								</div>
 							</div>
 						</li>
 						<li class="news-list__item">
 							<div class="row">
-								<div class="col-md-48 col-lg-37">
+								<div class="col-xs-37">
 									<span class="news-list__item-data">
 										22.12.2015
 									</span>
@@ -264,7 +265,7 @@
 										</span>
 									</a>
 								</div>
-								<div class="col-md-48 col-lg-11">
+								<div class="col-xs-11">
 									<a href="">
 										<img class="news-list__item-frame" src="images/pages-images/news/img-4.jpg" width="137" height="112" alt="" />
 									</a>
@@ -278,20 +279,20 @@
 				<nav class="pagination--justify">
 	<ul class="row pagination">
 		
-		<li class="col-lg-9 unactive">
+		<li class="col-xs-9 unactive">
 			<a href="#" aria-label="Previous">
 				<span class="icons icons--paging-arrow-left" aria-hidden="true"></span><span class="decorate">Пред.</span>
 			</a>
 		</li>
 
-		<li class="col-lg-5 active"><a href="#"><span class="decorate">1</span></a></li>
-		<li class="col-lg-5"><a href="#"><span class="decorate">2</span></a></li>
-		<li class="col-lg-5"><a href="#"><span class="decorate">3</span></a></li>
-		<li class="col-lg-5"><span>...</span></li>
-		<li class="col-lg-5"><a href="#"><span class="decorate">4</span></a></li>
-		<li class="col-lg-5"><a href="#"><span class="decorate">5</span></a></li>
+		<li class="col-xs-5 active"><a href="#"><span class="decorate">1</span></a></li>
+		<li class="col-xs-5"><a href="#"><span class="decorate">2</span></a></li>
+		<li class="col-xs-5"><a href="#"><span class="decorate">3</span></a></li>
+		<li class="col-xs-5"><span>...</span></li>
+		<li class="col-xs-5"><a href="#"><span class="decorate">4</span></a></li>
+		<li class="col-xs-5"><a href="#"><span class="decorate">5</span></a></li>
 
-		<li class="col-lg-9">
+		<li class="col-xs-9">
 			<a href="#" aria-label="Next">
 				<span class="decorate">След.</span><span class="icons icons--paging-arrow-right" aria-hidden="true"></span>
 			</a>
@@ -314,14 +315,14 @@
 	<div class="footer__top">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-6">
+				<div class="col-xs-6">
 
 					<a class="footer__logo" href="">
 						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
 					</a>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<div class="footer__phone">
 						<span class="footer__phone-label">
@@ -347,7 +348,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-48 col-lg-11">
+				<div class="col-xs-11">
 
 					<ul class="nav btmnav btmnav--bold">
 						<li class="btmnav__item">
@@ -375,7 +376,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -401,7 +402,7 @@
 					</ul>
 
 				</div>
-				<div class="col-md-48 col-lg-10">
+				<div class="col-xs-10">
 
 					<ul class="nav btmnav">
 						<li class="btmnav__item">
@@ -433,10 +434,10 @@
 	<div class="footer__bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-48 col-lg-24">
+				<div class="col-xs-24">
 					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
 				</div>
-				<div class="col-md-48 col-lg-24 text-right">
+				<div class="col-xs-24 text-right">
 					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
 				</div>
 			</div>
